--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kasir-salon",
   "version": "0.0.1",
-  "description": "A Quasar Framework app",
+  "description": "kasir salon",
   "productName": "Quasar App",
   "cordovaId": "org.cordova.quasar.app",
   "capacitorId": "",
